Fix blur on ios

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -53,7 +53,6 @@ body {
 }
 
 /* From https://gist.github.com/MoOx/9137295 */
-
 .reset-button {
     border: none;
     margin: 0;
@@ -89,6 +88,7 @@ body {
     z-index: 2;
     background-color: var(--compose-box-bg);
     backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px); /* Needed for Safari in 2023 */
 }
 
 .start-view {
@@ -108,6 +108,7 @@ body {
 #compose-box {
     background-color: var(--compose-box-bg);
     backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px); /* Needed for Safari in 2023 */
     position: fixed;
     bottom: 0;
 
